# ITA-BPM-software

./: .gitignore  CMakeLists.txt  Makefile  README.md
analysis/: Analysis.ipynb
client/: CMakeLists.txt  config.yaml
client/include/: DAQCtrl.h
client/src/: client.cpp
include/: DMACtrl.h  LTC2333.h  LTC2333_read.h  LTC2333_write.h  UIO.h
server/: CMakeLists.txt
server/include/: LTC2333.h  UDMABuf.h  UIO.h  i2c.h
server/scripts/: ita-bpm-daq.service
server/src/: LTC2333.cpp  UIO.cpp  server.cpp
src/: LTC2333.cpp  LTC2333_read.cpp  LTC2333_write.cpp  UIO.cpp  server.cpp  test.cpp
